Initial commit. Seeds us with some sample data for messing about.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "OPT-Boilerplate",
-  "version": "0.3.0",
-  "description": "A blank slate for learning modules using modern development practices and toolchains.",
+  "name": "PHT006-Visual-Wiki",
+  "version": "0.1.0",
+  "description": "A big, huge, massive explorable diagram of pharmaceutical dose forms.",
   "main": "main.js",
-  "repository": "https://github.com/Zygar/OPT-Boilerplate.git",
+  "repository": "https://github.com/Zygar/PHT006-Visual-Wiki",
   "author": "Andy Wilkinson <hello@andy.town>",
   "license": "MIT",
   "devDependencies": {
