--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "style-loader": "^0.19.0",
+    "vue-loader": "^13.5.0",
+    "vue-template-compiler": "^2.5.9",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.3",
     "webpack-merge": "^4.1.1",
@@ -36,6 +38,7 @@
   },
   "dependencies": {
     "jquery": "^3.2.1",
-    "normalize.css": "^7.0.0"
+    "normalize.css": "^7.0.0",
+    "vue": "^2.5.9"
   }
 }
