--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jquery": "^3.2.1",
     "markdown-loader": "^2.0.1",
     "normalize.css": "^7.0.0",
-    "vue": "^2.5.9"
+    "vue": "^2.5.9",
+    "vue-tippy": "^2.0.2"
   }
 }
